First exercise is done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.5)
 
 project(Advance_CPP LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(Advance_CPP main.cpp)
+add_executable(Advance_CPP_1 main.cpp)
+add_executable(Advance_CPP_2 main.cpp)
+
