--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(Advance_CPP_1 main.cpp)
-add_executable(Advance_CPP_2 main.cpp)
+add_executable(Advance_CPP_2 week_2.cpp)
 
