exercise 5 is done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_executable(Advance_CPP_1 main.cpp)
 add_executable(Advance_CPP_2 week_2.cpp)
 add_executable(Advance_CPP_3 exercise_3.cpp)
+add_executable(Advance_CPP_4 exercise_4.cpp)
+add_executable(Advance_CPP_5 exercise_5.cpp)
+
+
+
 
 
 
