--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(Advance_CPP_7 exercise_7.cpp)
 add_executable(Advance_CPP_8 exercise_8.cpp)
 add_executable(Advance_CPP_9 exercise_9.cpp)
 add_executable(Advance_CPP_10 exercise_10.cpp)
+add_executable(Advance_CPP_11 exercise_11.cpp)
 
 
 
