--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ add_executable(Advance_CPP_8 exercise_8.cpp)
 add_executable(Advance_CPP_9 exercise_9.cpp)
 add_executable(Advance_CPP_10 exercise_10.cpp)
 add_executable(Advance_CPP_11 exercise_11.cpp)
-
+add_executable(Advance_CPP_12 exercise_12.cpp)
 
 
 
