--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_executable(Advance_CPP_11 exercise_11.cpp)
 add_executable(Advance_CPP_12 exercise_12.cpp)
 add_executable(Advance_CPP_13 exercise_13.cpp)
 add_executable(Advance_CPP_14 exercise_14.cpp)
+add_executable(Advance_CPP_15 exercise_15.cpp)
+
 
 
 
