--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(Advance_CPP_13 exercise_13.cpp)
 add_executable(Advance_CPP_14 exercise_14.cpp)
 add_executable(Advance_CPP_15 exercise_15.cpp)
 add_executable(Advance_CPP_16 exercise_16.cpp)
+add_executable(Advance_CPP_17 exercise_17.cpp)
 
 
 
