exercise_18: pair, tuple, map, structered binding are done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_executable(Advance_CPP_14 exercise_14.cpp)
 add_executable(Advance_CPP_15 exercise_15.cpp)
 add_executable(Advance_CPP_16 exercise_16.cpp)
 add_executable(Advance_CPP_17 exercise_17.cpp)
+add_executable(Advance_CPP_18 exercise_18.cpp)
 
 
 
