exercise_27 is done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,8 @@ add_executable(Advance_CPP_23 exercise_23.cpp)
 add_executable(Advance_CPP_24 exercise_24.cpp)
 add_executable(Advance_CPP_25 exercise_25.cpp)
 add_executable(Advance_CPP_26 exercise_26.cpp)
+add_executable(Advance_CPP_27 exercise_27.cpp)
+
 
 
 
