exercise_30 is done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ add_executable(Advance_CPP_24 exercise_24.cpp)
 add_executable(Advance_CPP_25 exercise_25.cpp)
 add_executable(Advance_CPP_26 exercise_26.cpp)
 add_executable(Advance_CPP_27 exercise_27.cpp)
+add_executable(Advance_CPP_28 exercise_28.cpp)
+add_executable(Advance_CPP_30 exercise_30.cpp)
 
 
 
